# FindUniqueN

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt  FindUniqueMax.cpp  FindUniqueMax.h
tests/: CMakeLists.txt  Tests.cpp  testdata.txt
tools/: CMakeLists.txt  FindUniqueMaxN.cpp
